k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fenrir
  labels:
    name: fenrir
spec:
  rules:
  - host: app.sourabh.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fenrir-frontend
            port: 
              number: 80
  - host: backend.sourabh.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fenrir-backend
            port: 
              number: 80
  - host: express.sourabh.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo-service
            port: 
              number: 80
